<resources>
    <string name="app_name">5Gst</string>
    <string name="startIperf">start</string>
    <string name="stopIperf">stop</string>
    <string name="forceStopIperf">terminate</string>
    <string name="clearLogs">clear</string>
    <string name="deviceIp">Device ip :</string>
    <string name="refreshIp">refresh</string>
    <string name="hideIp">hide</string>
    <string name="iPerf">iPerf</string>
    <string name="pingTesting">TESTING…</string>
    <string name="udpPing">UDP PING</string>
    <string name="bigStop">STOP</string>
    <string name="pingLabel">Ping:</string>
    <string name="noneVal">---</string>
    <string name="ipLabel">ip:</string>>
    <string name="performAsCommand">PERFORM AS COMMAND</string>
    <string name="icmpPing">ICMP PING</string>
    <string name="pingByICMPLabel">ping by ICMP:</string>
    <string name="startUdpPingServer">start udp ping server</string>
    <string name="pingText">PING</string>
    <string name="downloadText">Download iperf args</string>
    <string name="uploadText">Upload iperf args</string>
    <string name="device_ip">Device ip:</string>
    <string name="iperf_mobile">iperf mobile args:</string>
    <string name="iperfServer">iperf server args:</string>
    <string name="server_ip">server ip:</string>
    <string name="thisIsServer">this is server</string>
    <string-array name="commands">
        <item>iPerf</item>
        <item>Ping</item>>
    </string-array>
    <string name="mbps">Mbps</string>
    <string name="ping">ping</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="ms">ms</string>
    <string name="section_name">Section name</string>
    <string name="add_widget">Add widget</string>
    <string name="tap_to_start_session">Tap to start session</string>
    <string name="empty">_____</string>
    <string name="start">start</string>
    <string name="download_speed">Download speed </string>
    <string name="default_main_address">5gst.ru:5555</string>
    <string name="main_address_hint">Main address:</string>
    <string name="balancer_mode">Balancer mode</string>
    <string name="direct_iperf_mode">Direct iPerf mode</string>
    <string name="_0">0</string>
    <string name="upload_speed">Upload speed</string>
    <string name="_ping">Ping</string>
    <string name="dot">.</string>
    <string name="policy_title">Terms and Conditions</string>
    <string name="policy_content">By using this app you agree to our <a href="https://5gst.ru/static/Privacy_Policy_for_5G_Speed_Test_App.html">Privacy Policy</a></string>
    <string name="globalSharedPreferences">globalPreferences</string>
    <string name="google_public_DNS">8.8.8.8</string>
    <string name="ip_address_mock">255.255.255.255</string>
    <string name="iperf_args">iperf args</string>
    <string name="this_device">device:</string>
    <string name="server">server:</string>

    <string name="iperfSharedPreferences">iperfPreferences</string>
    <string name="dev_iperf_args">dev_iperf_args</string>
    <string name="dev_tools_iperf_args_hint">Enter iPerf script</string>
    <string name="download_device_args">download_device_args</string>
    <string name="download_server_args">download_server_args</string>
    <string name="upload_device_args">upload_device_args</string>
    <string name="upload_server_args">upload_server_args</string>
    <string name="default_download_device_iperf_args">-P 10 -b 120m</string>
    <string name="default_upload_device_iperf_args">-P 10 -b 120m</string>
    <string name="default_download_server_iperf_args"> </string>
    <string name="default_upload_server_iperf_args"> </string>
    <string name="immutable_download_device_args">-f b -i 0.1 --sum-only -u -R</string>
    <string name="immutable_download_server_args">-u</string>
    <string name="immutable_upload_device_args">-f b -i 0.1 --sum-only</string>
    <string name="immutable_upload_server_args"> </string>

    <string name="user_immutable_down_dev_args">-u -R</string>
    <string name="user_immutable_down_serv_args">-u</string>
    <string name="user_immutable_up_dev_args"> </string>
    <string name="user_immutable_up_serv_args"> </string>
    <string name="dev_tools">Dev tools</string>
    <string name="setup_pipeline">Setup pipeline</string>
</resources>