<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/download_speed"
            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/download_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:text="@string/_0"
            android:textAppearance="@style/Headline4"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/mbps"
            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/upload_speed"

            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/upload_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_0"

            android:textAppearance="@style/Headline4"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/mbps"

            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/_ping"

            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/ping_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_0"
            android:textAppearance="@style/Headline4"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/ms"

            android:textAppearance="@style/Subtitle1"
            android:textColor="?android:attr/textColorPrimary" />
    </TableRow>

</TableLayout>
