<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/pipeline_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.SetupPipelineTab">

    <Button
        android:id="@+id/add_pipeline_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/add_pipeline"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arial_mono_bold"

            android:gravity="center"
            android:text="@string/downloadText"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/download_iperf_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"

                    android:text="@string/this_device"
                    android:textAppearance="@style/Headline2"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/download_device_args"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/default_download_device_iperf_args"
                    android:paddingLeft="15dp"
                    app:hintEnabled="false" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/download_iperf_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/server"

                    android:textAppearance="@style/Headline2"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/download_iperf_dev"
                    app:layout_constraintTop_toBottomOf="@+id/download_iperf_dev" />


                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/download_server_args"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/default_download_server_iperf_args"
                    android:paddingLeft="10dp"
                    app:hintEnabled="false" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arial_mono_bold"

            android:gravity="center"
            android:text="@string/uploadText"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upload_iperf_dev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"

                    android:text="@string/this_device"
                    android:textAppearance="@style/Headline2"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/upload_device_args"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/default_upload_device_iperf_args"
                    android:paddingLeft="10dp"
                    app:hintEnabled="false" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/upload_iperf_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/server"
                    android:paddingLeft="10dp"

                    android:textAppearance="@style/Headline2"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/download_iperf_dev"
                    app:layout_constraintTop_toBottomOf="@+id/download_iperf_dev" />


                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/upload_server_args"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/default_upload_server_iperf_args"
                    android:paddingLeft="10dp"
                    app:hintEnabled="false" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_pipelines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>



</LinearLayout>
</ScrollView>